export interface Fiat {
    id: number;
    symbol: string;
    name: string;
    created_at: Date;
    updated_at: Date;
}
